<resources>
    <string name="app_name">Learn Solo</string>

    <!--Contact Form-->

    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department…</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="contact_us_activity">Contact Us Activity</string>
    <string name="home">Home</string>
    <string name="subscription_plans">Subscription Plans</string>
    <string name="contact_us">Contact Us</string>
    <string name="create_account">Create Account</string>
    <string name="create_student_account">Create Student Account</string>
    <string name="create_parent_account">Create Parent Account</string>
    <string name="learn_solo">Learn Solo</string>
    <string name="hello_aramtiraturyan_com">hello@aramtiraturyan.com</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="buffering">Buffering</string>
    <string name="discover_solo_learn_in_this_video">Discover Solo Learn in this video</string>
    <string name="once">Once</string>
    <string name="continuously">continuously</string>
    <string name="stop">Stop</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="login_as">Login As</string>
    <string name="login">Login</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="_6_months">6 months</string>
    <string name="_3_months">3 months</string>
    <string name="_1_month">1 month</string>
    <string name="buy">Buy</string>
    <string name="eur_29_99">EUR 29,99</string>
    <string name="eur_119_99">EUR 119,99</string>
    <string name="for_1_month">for 1 month</string>
    <string name="for_3_months">for 3 months</string>
    <string name="for_6_months">for 6 months</string>
    <string name="eur_74_99">EUR 74,99</string>
    <string name="basic">Basic</string>
    <string name="standard">Standard</string>
    <string name="premium">Premium</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="parent">parent</string>
    <string name="email_of_parent">Email of Parent</string>
    <string name="student">student</string>
    <string name="grade">Grade</string>
    <string name="age">Age</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_last_name">Enter your Last Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_parent_s_email">Enter your parent\'s Email</string>
    <string name="your_phone">Your Phone</string>
    <string name="view_all_data">View All data</string>
    <string name="student_home_activity">Student Home Activity</string>
    <string name="parent_home_activity">Parent Home Activity</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="list_of_children">List of Children</string>
    <string name="add_a_child">Add a child</string>
    <string name="add_or_view_children">Add or view children</string>
    <string name="student_name">Student Name</string>
    <string name="student_email">Student Email</string>
    <string name="student_phone">Student Phone</string>
    <string name="student_password">Student Password</string>
    <string name="confirm_student_password">Confirm Student Password</string>
    <string name="number_of_students_to_add">Number of students to add</string>
    <string name="students_to_add">Students to Add</string>
    <string name="hello">Hello</string>
    <string name="show">Show</string>
    <string name="submit">Submit</string>
    <string name="quizz_exercises">Quizz exercises</string>
    <string name="select_date">Select Date</string>
    <string name="schedule_notification">Schedule Notification</string>
    <string name="set_notification">Set Notification</string>
    <string name="no_alarm_set">No Alarm set</string>
    <string name="select_time_for_alarm">Select time for alarm</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="pdf_lesson">PDF lessons</string>


    <string-array name="loginas">
        <item>student</item>
        <item>parent</item>
    </string-array>

    <string-array name="grade">
        <item>6eme</item>
        <item>5eme</item>
        <item>4eme</item>
        <item>3eme</item>
        <item>Seconde</item>
        <item>1re</item>
        <item>Terminale S</item>
        <item>Terminale ES</item>
        <item>Terminale L</item>
    </string-array>

    <string-array name="age">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
    </string-array>

    <string-array name="nb_children_to_add">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


</resources>
