<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SubscribeParentFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            android:text="@string/create_parent_account"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/parent_signup_name"
            android:layout_width="fill_parent"
            android:hint="@string/enter_your_name"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/parent_signup_lastname"
            android:layout_width="fill_parent"
            android:hint="@string/enter_your_last_name"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/parent_signup_email"
            android:layout_width="fill_parent"
            android:hint="@string/enter_your_email"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/parent_signup_phone"
            android:layout_width="fill_parent"
            android:hint="@string/your_phone"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="phone"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/parent_signup_password"
            android:layout_width="fill_parent"
            android:hint="@string/password"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/parent_signup_confirm_password"
            android:layout_width="fill_parent"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/colorPrimary"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/parent_signup_account_type"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:text="@string/parent"
            android:layout_marginBottom="20dp"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="14sp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/parent_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:paddingBottom="1dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="1dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="13sp" />
    </LinearLayout>



</RelativeLayout>