<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlertActivity">

    <TextView
        android:id="@+id/alerttextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/alarm_button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/no_alarm_set"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/alarm_button_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/select_time_for_alarm"
        />

    <Button
        android:id="@+id/alarm_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/alarm_button_timepicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/cancel_alarm"
        />

</RelativeLayout>