<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".SubscriptionFragment">


    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/subscription_plans"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"/>



    <TableLayout
        android:id="@+id/tabla_subscription"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>
        <TableRow
            android:id="@+id/subscription_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center">

            <TextView
                android:id="@+id/subscription_1month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAlignment="center"
                android:text="@string/basic"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/subscription_3months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAlignment="center"
                android:text="@string/standard"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/subscription_6month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textAlignment="center"
                android:text="@string/premium"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:gravity="center">

            <TextView
                android:id="@+id/price_1month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/eur_29_99"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/price_3months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/eur_74_99"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/price_6months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/eur_119_99"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center">

            <TextView
                android:id="@+id/empty1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/for_1_month"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/empty2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/for_3_months"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:id="@+id/empty3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/for_6_months"
                android:textSize="12sp"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center">

            <Button
                android:id="@+id/subscribe_button1"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/buy"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                />

            <Button
                android:id="@+id/subscribe_button2"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/buy"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />

            <Button
                android:id="@+id/subscribe_button3"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:paddingBottom="1dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="1dp"
                android:text="@string/buy"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="13sp" />


        </TableRow>
    </TableLayout>


</RelativeLayout>