<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".parent_displaychildren">

    <TextView
        android:id="@+id/add_child_by_email"
        android:layout_width="339dp"
        android:layout_height="26dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/add_a_child"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registered_children"
        android:layout_width="339dp"
        android:layout_height="26dp"
        android:layout_marginTop="164dp"
        android:gravity="center"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/list_of_children"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backbtndisplch"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:paddingLeft="15dp"
        android:paddingTop="1dp"
        android:paddingRight="15dp"
        android:paddingBottom="1dp"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.916"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registered_children"
        app:layout_constraintVertical_bias="0.028" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_list_of_children"
        android:layout_width="370dp"
        android:layout_height="432dp"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backbtndisplch" />

</androidx.constraintlayout.widget.ConstraintLayout>